Make main content container display grid and align the grid correctly

--- a/styles.css
+++ b/styles.css
@@ -149,12 +149,15 @@ body {
 
 .main-content-container {
     background-color: rgb(211, 211, 211, 0.5);
+    display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
+    border: 2px solid yellow;
 }
 
 .project-card-container {
     grid-column: 1 / 2;
+    grid-row: 1 / 3;
     display: grid;
     gap: 5%;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -165,4 +168,9 @@ body {
     height: 350px;
     width: 250px;
     background-color: white;
+}
+
+.announcements-container {
+    grid-column: 2 / 3;
+    grid-row: 1 /2;
 }
